# Wasm-benchmark

./: README.md
benchmark/: Cargo.toml
benchmark/src/: main.rs
benchmark/test/life/: benchmark_test.go
benchmark/test/life/wasmfile/: difference.wasm  fibonacci.wasm  string.wasm
benchmark/test/src/: Cstring.rs  differece.rs  fibonacci.rs  loop.rs  math.rs  power.rs
benchmark/test/wasmer/: benchmark_test.go
benchmark/test/wasmer/wasmfile/: CString.wasm  math.wasm
