[package]
name = "benchmark"
version = "0.1.0"
authors = ["AchalaSB <achalasbhatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
num = "0.2.0"
serde = "*"
serde_derive = "*"
serde_json = "*"